# homework_22

./: .env.simple  README.md  catalog_fixture.json  groups_fixture.json  pyproject.toml  users_dump.json
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_rename_view_counter_blog_view_count.py  0003_alter_blog_view_count.py
blog/templates/blog/: base.html  blog.html  blog_delete.html  blog_form.html  home.html
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/management/commands/: add_category.py
catalog/migrations/: 0001_initial.py  0002_product_view_counter_alter_product_image.py  0003_remove_product_view_counter.py  0004_alter_product_price.py  0005_alter_product_price.py  0006_alter_product_options_product_owner_and_more.py
catalog/templates/: base.html  home.html  product_detail.html  product_list.html
catalog/templates/catalog/: base.html  contacts.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_menu_top.html
catalog/templates/includes/: inc_menu_top.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: create_group.py  create_group_fixture.py
users/migrations/: 0001_initial.py  0002_rename_user_customuser.py  0003_rename_customuser_user.py  0004_user_username.py
users/templates/users/: login.html  register.html  user_form.html
