[tool.poetry]
name = "homework-22"
version = "0.1.0"
description = ""
authors = ["Sofya Bushkovskaya <sonya.yudina17@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
poetry = "^1.8.3"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
