[tool.poetry]
name = "homework-22"
version = "0.1.0"
description = ""
authors = ["Sofya Bushkovskaya <sonya.yudina17@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
poetry = "^1.8.3"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
black = "^24.8.0"
pillow = "^10.4.0"
ipython = "^8.28.0"
django = "^5.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
